2009-02-19  higepon  <higepon@users.sourceforge.jp>

        * StandardOutputPort.h : Added. stdout/stderr doesn't support port-position.

        * StandardInputPort.h : Added. stdin doesn't support port-position.

        * test/input-port.scm : Passes all of the custom binary input port. Yey!.

        * CustomBinaryInputPort.cpp : Added get-bytevector-n for custom-binary-input-port.

2009-02-18  higepon  <higepon@users.sourceforge.jp>

        * Added port-has-set-port-position!?.

        * PortProcedures.cpp : Added port-has-port-position?. It works only for custom-binary-input-port only now.

        * Object.h (scheme): Added toPort().

        * Added : Port.h and BinaryPort.h

        * Changed Port inheritance.

        * Added open-bytevector-input-port.

        * test/input-port.scm: Added tests for (utf-16-codec).

        * lib/mosh/test.ss (mosh): Fixed the bug.

        * test/input-port.scm: Added for tests of Input ports.

        * Added port-eof?.

2009-02-17  higepon  <higepon@users.sourceforge.jp>

        * fileno() => fileNo(). fileno() member function causes compile error on FreeBSD.

        * lib/srfi/%3a98/os-environment-variables.sls (srfi): Added.

2009-02-15  higepon  <higepon@users.sourceforge.jp>

        * Wrote : README and AUTHORS.

        * Arithmetic.cpp (Arithmetic::sin): Make it faster.

        * Enabled following options for GC. These options makes mosh very faster.
          AC_DEFINE(DONT_ADD_BYTE_AT_END)
          AC_DEFINE(LARGE_CONFIG)

          (let loop ([i 0])
            (if (= i 10000000)
              '()
               (begin (vector 1 2 3)
               (loop (+ i 1)))))

        * Object-inl.h (Object::makeObjectArray): Inlined.

        * Vector.h (Vector::Vector): Inlined Constructor for better performance.

        * VM-Run.cpp : Added VECTOR instruction for (vector ...). For better performance.

2009-02-14  higepon  <higepon@users.sourceforge.jp>
