@@ -1,5 +1,7 @@
 2009-02-19  higepon  <higepon@users.sourceforge.jp>
 
+        * Now string-input-port supports port-position.
+
         * StandardOutputPort.h : Added. stdout/stderr doesn't support port-position.
 
         * StandardInputPort.h : Added. stdin doesn't support port-position.
